--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="covid 19 estimator.">
-	<link rel="shortcut icon" href="https://kamgueblondin.github.io/my-covid-19-estimator-frontend/images/icons/favicon.ico" type="image/vnd.microsoft.icon" />
+	<link rel="shortcut icon" href="https://nel-blackstar.github.io/front-end-assessment-cv19/images/icons/favicon.ico" type="image/vnd.microsoft.icon" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content="https://kamgueblondin.github.io/my-covid-19-estimator-frontend/index.html" />
+	<meta property="og:url" content="https://nel-blackstar.github.io/front-end-assessment-cv19/index.html" />
 	<meta property="og:title" content="covid 19 estimator"/>
 	<meta property="og:description" content="::cck::1867::/cck::::fulltext::covid 19 estimator..."/>
 	<meta property="og:site_name" content="covid 19 estimator"/>
 	<meta name="twitter:description" content="::cck::1867::/cck::::fulltext::covid 19 estimator..."/>
-	<link rel="stylesheet" type="text/css" href="https://kamgueblondin.github.io/my-covid-19-estimator-frontend/css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://nel-blackstar.github.io/front-end-assessment-cv19/css/main.css">
 </head>
-<body style="background-color: #999999;">
+<body style="background-color: red;">
 	
 	<div class="limiter">
 		<div class="container-estimator100">
 			<div class="estimator100-more"></div>
 
 			<div class="wrap-estimator100 p-l-50 p-r-50 p-t-72 p-b-50">
-				<form class="estimator100-form validate-form" method="POST" action="https://kamgueblondin.github.io/my-covid-19-estimator-frontend/estimator.php">
+				<form class="estimator100-form validate-form" method="POST" action="https://nel-blackstar.github.io/front-end-assessment-cv19/estimator.php">
 					<h1 class="estimator100-form-title p-b-59">
-						COVID 19 ESTIMATOR
+						My COVID 19 ESTIMATOR
 					</h1>
 
 					<div class="wrap-input100 validate-input" data-validate=" Population is required">
@@ -72,7 +72,7 @@
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-	<script src="https://kamgueblondin.github.io/my-covid-19-estimator-frontend/js/main.js"></script>
+	<script src="https://nel-blackstar.github.io/front-end-assessment-cv19/js/main.js"></script>
 
 </body>
 </html>
